--- a/PyTut2.2_VariablesTypes.ipynb
+++ b/PyTut2.2_VariablesTypes.ipynb
@@ -681,7 +681,7 @@
     "print(\"5 - 2 =\", 5 - 2)\n",
     "print(\"5 * 2 =\", 5 * 2)\n",
     "print(\"5 / 2 =\", 5 /  2)\n",
-    "print(\"5 % 2 =\", 5 % 2)\n",
+    "print(\"5 % 2 =\", 5 % 2)   # Modulas or remainder\n",
     "print(\"5 ** 3 =\", 5 ** 3) # or \n",
     "print(\"5 // 2 =\", 5 // 2)"
    ]
