--- a/PyTut2.4_Lists.ipynb
+++ b/PyTut2.4_Lists.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,9 +675,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "a = [1, 2, 3]\n",
     "a.append([10, 20])\n",
     "print(a)\n",
-    "b = a.copy()  # makes a shallow copy"
+    "b = a.copy()  # makes a shallow copy\n",
+    "b"
    ]
   },
   {
@@ -686,6 +688,19 @@
    "source": [
     "1. Is b the same object as a?\n",
     "1. What about the contents, are they the same or different?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('b is a ?', b is a)\n",
+    "print('a =', a)\n",
+    "print('a mem addresses:', list(map(id, a)))\n",
+    "print('b =', b)\n",
+    "print('b mem addresses:', list(map(id, b)))"
    ]
   },
   {
@@ -796,6 +811,19 @@
     "    [7, 8, 9],\n",
     "]\n",
     "b = copy.deepcopy(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('b is a ?', b is a)\n",
+    "print('a =', a)\n",
+    "print('a mem addresses:', list(map(id, a)))\n",
+    "print('b =', b)\n",
+    "print('b mem addresses:', list(map(id, b)))"
    ]
   },
   {
