--- a/PyTut2.6_StringsAgain.ipynb
+++ b/PyTut2.6_StringsAgain.ipynb
@@ -354,11 +354,16 @@
     " - https://docs.python.org/3/library/stdtypes.html#string-methods\n",
     " - Commonly used methods are **strip, split, join, upper, lower, startswith, endswith, encode, decode**.\n",
     "  - Try these methods out below.\n",
-    "1. Write code to search these strings and print out the position start of the 'oo' as a percentage of the length to 1 decimal place:\n",
+    "1. Write code to search these strings and print out the position start of the 'oo' \n",
     " - Spooky, Understood, Harpoon\n",
-    " - Format the output to say: I found 'oo' in \"x\" at y.y%\n",
-    " - Replacing x with each word and y.y as the percentage into the word.\n",
-    " - Format the percentage to one decimal place.\n",
+    " - Format the output to say: I found 'oo' in \"x\" at y\n",
+    " - Replacing x with each word and y as the position into the word (with 1 as the first position).\n",
+    "1. Output the following values formatting as described:\n",
+    "    - \"Hello Word\" center aligned within 20 characters.\n",
+    "    - 123 as an integer, right aligned with a width of 10 zero prefixed chars.\n",
+    "    - 17.6789 as a float to 3 decimal places.\n",
+    "    - List `['a', 'b', 'c' ]` as it's raw (represented) value.\n",
+    "\n",
     "* Copy & paste your answers into chat once completed"
    ]
   },
