--- a/PyTut2.9_Conditionals.ipynb
+++ b/PyTut2.9_Conditionals.ipynb
@@ -55,9 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age? 18\n",
+      "You are old enough to drive\n",
+      "Woo hoo\n"
+     ]
+    }
+   ],
    "source": [
     "age = int(input('Age? '))\n",
     "if age > 17:\n",
@@ -75,9 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age? 8\n",
+      "You are not old enough to drive\n"
+     ]
+    }
+   ],
    "source": [
     "# Use an if statement if you want to execute different code regardless\n",
     "# of whether the condition ws met or not\n",
@@ -100,9 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age? 15\n",
+      "You are not old enough to drive\n"
+     ]
+    }
+   ],
    "source": [
     "# If you want to check for multiple conditions use elif\n",
     "# If the first matches it won't check other conditions that follow\n",
@@ -152,9 +180,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 6\n",
+    "if x > 1 and (x > 5 or x < 10):\n",
+    "    print('yes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First number? 3\n",
+      "Second number? 5\n",
+      "Answer is 2\n"
+     ]
+    }
+   ],
    "source": [
     "# Remember that python code uses block indentation:\n",
     "a = int(input('First number? '))\n",
@@ -183,9 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# assignment if/else\n",
     "x = False\n",
@@ -220,9 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Its True that it is not False!!!\n"
+     ]
+    }
+   ],
    "source": [
     "# Invert (not) the True to False;\n",
     "if not True: print('Its True!!!')\n",
@@ -231,9 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Its True it is False!!!\n"
+     ]
+    }
+   ],
    "source": [
     "# Invert the False to be true;\n",
     "if not False: print('Its True it is False!!!')"
@@ -241,19 +325,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is set\n",
+      "Its True it is False!!!\n"
+     ]
+    }
+   ],
    "source": [
+    "x = None\n",
+    "\n",
+    "if not x:\n",
+    "    x = 1\n",
+    "    print('x is set')\n",
+    "    \n",
     "# Many types can be defined as False;\n",
     "if not None: print('Its True it is False!!!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Its True it is False!!!\n",
+      "Its True it is False!!!\n",
+      "Its True it is False!!!\n",
+      "Its True it is False!!!\n",
+      "Its True it is False!!!\n"
+     ]
+    }
+   ],
    "source": [
     "#Empty sequences and colelctions;\n",
     "if not '': print('Its True it is False!!!')\n",
@@ -265,7 +376,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,19 +407,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-36-a871fdc9ebee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "assert False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def myfunc():\n",
+    "    return 2\n",
+    "\n",
+    "assert myfunc() == 2"
+   ]
   },
   {
    "cell_type": "code",
@@ -302,9 +450,11 @@
    "metadata": {},
    "source": [
     "## Exercise:\n",
-    "* Answer each question in a seperate cell\n",
-    "1. Write some code which asks for the number of wheels and maximum number of passengers (including the driver) and then guesses the vehicle type from the following:\n",
+    "* Some of these questions may benefit from breaking the problem down into small parts and working on each part in seperate cells.\n",
+    "1. Write some code which asks for the number of wheels and maximum number of passengers (including the driver) and then make a **simple guess** of the vehicle type from the following:\n",
     " - Unicycle, bicycle, car, bus, train, unknown\n",
+    " \n",
+    " \n",
     "1. Write some code to convert inputed temperature to and from both celsius, fahrenheit.\n",
     " - Round the answers to whole values\n",
     " - C = (9 * F) / 5 + 32\n",
@@ -346,21 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,26 +540,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load answers/temperature.py"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
