--- a/PyTut3.1_ForLoops.ipynb
+++ b/PyTut3.1_ForLoops.ipynb
@@ -135,12 +135,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "list(enumerate('abc'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for i, letter in enumerate('abcdefg'):  # using enumerate and unpacking into two variables\n",
     "    if i > 1 and i < 4:\n",
     "        continue\n",
     "    print(f'#{i} is {letter}')\n",
     "    if i > 4:\n",
-    "        break"
+    "        break\n",
+    "print('complete')"
    ]
   },
   {
@@ -149,6 +159,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(enumerate(['Rita', 'Sue', 'Bob'], 11))"
+   ]
   },
   {
    "cell_type": "code",
@@ -207,7 +226,7 @@
    "source": [
     "## Exercise\n",
     "* Answer each question in a seperate cell\n",
-    "1. Given the supplied colour_dict dictionary below step through it and print out each colour with it's code in a presentable format with aligned columns.\n",
+    "1. Given the supplied colour_dict dictionary below step through it and print out each colour keys with it's code value in a presentable format with aligned columns.  (Don't use the dictionary items method)\n",
     "    - Hint: `f'{x:>10s}'`\n",
     "1. Copy paste answer to #1 and modify to print an index for each colour starting at 1:\n",
     "    - for example 3rd item outputs as: `3)   black = #000000`\n",
@@ -220,10 +239,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x = 'red'\n",
-    "f'{x:>10s}'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -251,6 +267,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#2\n"
    ]
@@ -261,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#3\n"
+    "#3 Write a Python program to find those numbers which are both divisible by 7 and multiple of 5, between 1500 and 2700 (both include\n"
    ]
   },
   {
@@ -276,15 +299,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# %load answers/divide75.py"
+    "# %load answers/divide75.py\n"
    ]
   },
   {
