--- a/PyTut3.2_Generators.ipynb
+++ b/PyTut3.2_Generators.ipynb
@@ -41,6 +41,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "a = range(3)\n",
+    "print(a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# The range keyword returns a *list, or does it?\n",
     "for x in range(3, 10):\n",
     "    print(x , ' ', end=\"\")\n",
@@ -65,7 +76,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Simulating python2:\n",
+    "list(range(10))"
+   ]
   },
   {
    "cell_type": "code",
@@ -108,16 +122,17 @@
    "outputs": [],
    "source": [
     "# jumping ahead a bit this is how a generator might be defined, try this stepping through in thonny\n",
-    "def myrange(n):\n",
+    "def rangegen(n):\n",
     "    count = 0\n",
     "    while count < n:\n",
     "        yield(count)\n",
     "        count += 1\n",
-    "        \n",
-    "for i in myrange(10):\n",
-    "    print(i)\n",
     "\n",
-    "myrange(10)"
+    "def rangelist(n):\n",
+    "    return list(range(n))\n",
+    "        \n",
+    "%timeit rangegen(10000)    \n",
+    "%timeit rangelist(10000)"
    ]
   },
   {
@@ -134,7 +149,8 @@
    "outputs": [],
    "source": [
     "# enumerate is a very useful feature;\n",
-    "list(enumerate(grocery_list, 5))"
+    "mylist = [5, 6, 7]\n",
+    "list(enumerate(mylist, 5))"
    ]
   },
   {
@@ -143,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for count, item in enumerate(grocery_list):\n",
+    "for count, item in enumerate(mylist):\n",
     "    print('#', count, '=', item)"
    ]
   },
