--- a/PyTut3.3_Comprehensions.ipynb
+++ b/PyTut3.3_Comprehensions.ipynb
@@ -54,7 +54,36 @@
    "outputs": [],
    "source": [
     "result = []\n",
-    "for i in range(10):\n",
+    "for i in range(4):\n",
+    "        result.append(i * 5)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = [ (x * 5) for x in range(4) ]\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = []\n",
+    "for i in range(11):\n",
     "    if i % 2 == 0:\n",
     "        result.append(i)\n",
     "result"
@@ -74,7 +103,7 @@
    "outputs": [],
    "source": [
     "# Reading from middle outwards can help, the for, the filter the expression:\n",
-    "result = [ i for i in range(10) if i % 2 == 0 ]\n",
+    "result = [ i for i in range(11) if i % 2 == 0 ]\n",
     "result"
    ]
   },
@@ -265,7 +294,6 @@
     "import sys\n",
     "nums_squared_lc = [i * 2 for i in range(100000)]\n",
     "print(sys.getsizeof(nums_squared_lc))\n",
-    "87624\n",
     "nums_squared_gc = (i ** 2 for i in range(100000))\n",
     "print(sys.getsizeof(nums_squared_gc))"
    ]
@@ -318,6 +346,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mylist = [9, 3, 6, 1, 5, 0, 8, 2, 4, 7]\n",
+    "list_b = [6, 4, 6, 1, 2, 2]\n",
     "{i: mylist.index(i) for i in list_b}"
    ]
   },
@@ -342,7 +372,8 @@
     "Flat is better than nested.\n",
     "Sparse is better than dense.\n",
     "Readability counts.\n",
-    "'''.split()"
+    "'''.split()\n",
+    "words"
    ]
   },
   {
