--- a/PyTut3.8_Namespaces.ipynb
+++ b/PyTut3.8_Namespaces.ipynb
@@ -497,6 +497,56 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Debuging\n",
+    "#### Don't use print statements! Unless you have to ☺ (prefer a debug output option)\n",
+    "* Many IDE have built in debuggers.\n",
+    "* Running a script from command line with the debugger:\n",
+    "    `python -m pdb -c continue myscript.py`\n",
+    "* Or put one of these into a script to break into pdb:\n",
+    "    ```python\n",
+    "    import pdb; pdb.set_trace()   # < python 3.7\n",
+    "    breakpoint()  # Python 3.7+\n",
+    "    ```\n",
+    "#### PDB Quick Ref:\n",
+    "* h(elp) [command] = help. \n",
+    "* p(rint) <expr> = print expression.\n",
+    "* pp <expr> = pretty-print expression (good for long lists etc).\n",
+    "* l(ist) [first [,last] | .] = list lines or '.' for current position.  (\"l.\" is your friend)\n",
+    "* ll = long list current function or frame.\n",
+    "* n(ext) = execute until next.\n",
+    "* s(tep) = execute and step into.\n",
+    "* unt <line> = execuate up\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise:\n",
+    "Go through the VScode python intro tutorial:\n",
+    "https://code.visualstudio.com/docs/python/python-tutorial\n",
+    "* Start at the section:\n",
+    "    - \"Start VS Code in a project (workspace) folder\"\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
