--- a/PyTut2.3_Formatting.ipynb
+++ b/PyTut2.3_Formatting.ipynb
@@ -39,8 +39,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Formatting\n",
-    "* Old 'C' style: https://docs.python.org/3/library/stdtypes.html#printf-style-bytes-formatting\n",
+    "# Formatting Strings\n",
+    "### Old 'C' style formatting: \n",
+    "https://docs.python.org/3/library/stdtypes.html#printf-style-bytes-formatting\n",
+    "\n",
+    "Formatting specification is applied with the form `'%<spec>' % <values>`\n",
+    "\t\n",
+    "#### Format Specification Mini-Language\n",
+    "format_spec: `[[fill]align][sign][#][0][width][grouping_option][.precision][type]`\n",
+    " - fill = Any character\n",
+    " - align = `<` | `>` | `=` | `^`\n",
+    " - sign = `+` | `-` | ` `\n",
+    " - width = Number\n",
+    " - grouping_option = `_` | `,`\n",
+    " - precision = Number\n",
+    " - type = `b` | `c` | `d` | `e` | `E` | `f` | `F` | `g` | `G` | `n` | `o` | `s` | `x` | `X` | `%`\n",
+    "\n",
+    "Common types:\n",
+    "\n",
     "    - %s = String\n",
     "    - %d or %i = Signed decimal integer\n",
     "    - %f = float\n",
@@ -48,20 +64,80 @@
     "    - %x = Signed hexadecimal (lowercase)\n",
     "    - %X = Signed hexadecimal (uppercase)\n",
     "    \n",
-    "    * Formatters also take width and precision options, example:  \n",
-    "        - Formatter string: `Float: %07.3f` applied to 1.2345 would output: `Float: 001.234`\n",
+    "* Here is a float example with width and precision:  \n",
+    "    - Formatter string: `'Float: %07.3f'` applied to 1.2345 would output: `Float: 001.234`\n",
     "\n",
     "---\n",
     "\n",
-    "* The 'format' method:\n",
-    "    - https://docs.python.org/3/tutorial/inputoutput.html#the-string-format-method\n",
-    "    - https://docs.python.org/3/library/string.html#formatstrings\n",
+    "### The string 'format' method:\n",
+    "https://docs.python.org/3/tutorial/inputoutput.html#the-string-format-method  \n",
+    "https://docs.python.org/3/library/string.html#formatstrings  \n",
     "\n",
+    "The \"replacement field\" is in the string using this format:\n",
+    "    `{ [field_name_or_number] [! conversion] [: format_spec] }`\n",
+    "\n",
+    "* For example:\n",
+    "    - `'Float: {0:07.3f}'.format(1.2345)` # would output: `Float: 001.234`\n",
+    "    \n",
     "---\n",
     "\n",
     "* **New Style \"f-strings\":**\n",
     "    - **https://docs.python.org/3/tutorial/inputoutput.html#formatted-string-literals**\n",
-    "    - **https://docs.python.org/3/library/string.html#formatspec**"
+    "    - **https://docs.python.org/3/library/string.html#formatspec**\n",
+    "    \n",
+    "These formatters are very useful and readable.  \n",
+    "* The formatter and variable/expression is interpolated into the f-string.\n",
+    "* They provide same formatting as the format method.\n",
+    "* However, they include an expression rather than a variable reference.\n",
+    "* And do not need a call to the format method.\n",
+    "    - Example:\n",
+    "    ```\n",
+    "    var = 1.2345\n",
+    "    f'Float: { var :07.3f}'          # outputs: 'Float: 001.234'\n",
+    "    f'{var} x 2 = { var * 2 :.1f}'   # outputs: '1.2345 x 2 = 2.5'\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Old style 'C' format specification:\n",
+    "print('Float: %07.3f' % 1.2345)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The float formatter example:\n",
+    "print('Float: %07.3f' % 1.2345)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# f-string example:\n",
+    "var = 1.2345\n",
+    "print(f'Float: {var:07.3f}')\n",
+    "print(f'{var} x 2 = { var * 2 :.1f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The float formatter example:\n",
+    "print('Float: %07.3f' % 1.2345)"
    ]
   },
   {
@@ -76,10 +152,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# The float formatter example:\n",
-    "print('Float: %07.3f' % 1.2345)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
