added VScode excercises

--- a/PyTut2.2_VariablesTypes.ipynb
+++ b/PyTut2.2_VariablesTypes.ipynb
@@ -993,6 +993,72 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise:\n",
+    "1. Create a `mypackage` directory under your `<%USERPROFILE%>\\pytut` directory.\n",
+    "1. Start VScode in this directory, or \"Open Folder\" and open the `mypackage` directory.\n",
+    "1. Get familiar with the VScode file explorer, create a few files, directories and then delete them afterwards.\n",
+    "1. Press `<Ctrl>+<Shift>+P` to open the command pallete, then look or search for `Python: Select Interpreter`.\n",
+    "    - Select the Anaconda or preferred installed Python.   \n",
+    "    \n",
+    "    \n",
+    "5. Start a `Terminal => New Terminal`.\n",
+    "    - This should start a `CMD.exe` but might start PowerShell.\n",
+    "    - If prefered select the dropdown from the top center of the new terminal and set the default to `CMD.exe` or your preferred shell.   \n",
+    "    \n",
+    "1. In the terminal you can execute commands, try the following:\n",
+    "\n",
+    "```\n",
+    "dir\n",
+    "Python\n",
+    "import sys\n",
+    "print(sys.version)\n",
+    "print(sys.executable)\n",
+    "exit()\n",
+    "```\n",
+    "\n",
+    "7. In your `mypackage` directory create a `hello.py` new file and add this code:\n",
+    "\n",
+    "```python\n",
+    "name = 'World'\n",
+    "for i in range(1,6):\n",
+    "    msg = 'Hello ' + name + ' ' + str(i)\n",
+    "    print(msg)\n",
+    "```\n",
+    "\n",
+    "10. Save the new file and then run the script by clicking the green arrow (top right) or right clicking the file in the editor and selecting 'Run python file in terminal\"\n",
+    "1. On line `#4` (print statement) of the script set a breakpoint by clicking and making a red dot in the gutter to left of the line number.\n",
+    "1. Run the code in the debugger:\n",
+    "    1. Find the Debug Icon, hover over each icon on the left until you find \"Run and Debug\" or press `<Ctrl>+<Shift>+D`.\n",
+    "    1. Select \"Run and Debug\" and \"Python File\".\n",
+    "    1. The script will start executing in a new \"Python Debug Console\", and stop at the print.\n",
+    "    1. Using the debugger button bar now shown at top center of the editor you can hover each button and select `step over` a number of times and observe the execution.\n",
+    "    1. Step through a couple of times to see the variables change and output generated in the terminal window.\n",
+    "    1. Select the \"DEBUG CONSOLE\" in the Terminal area and type `msg` to output its current value.  Type `i` to output its current value.\n",
+    "    1. Change the `i` with `i = 1`.\n",
+    "    1. Switch Back to \"Python Debug Console\".\n",
+    "    1. Continue to step over.\n",
+    "\n",
+    "1. Play around with the Debugger for a while.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
