--- a/PyTut2.3_Formatting.ipynb
+++ b/PyTut2.3_Formatting.ipynb
@@ -58,7 +58,7 @@
     "Common types:\n",
     "\n",
     "    - %s = String\n",
-    "    - %d or %i = Signed decimal integer\n",
+    "    - %d = Signed decimal integer\n",
     "    - %f = float\n",
     "    - %r = represent (`__repr__`)\n",
     "    - %x = Signed hexadecimal (lowercase)\n",
@@ -115,7 +115,8 @@
    "outputs": [],
    "source": [
     "# The float formatter example:\n",
-    "print('Float: %07.3f' % 1.2345)"
+    "var = 1.2345\n",
+    "print('Float: {0:07.3f}'.format(var))"
    ]
   },
   {
