--- a/PyTut2.5_Tuples.ipynb
+++ b/PyTut2.5_Tuples.ipynb
@@ -407,65 +407,24 @@
    "metadata": {},
    "source": [
     "## Exercise:\n",
-    "Executing and using the list of tuples below...\n",
-    "* Answer each question in a seperate cell\n",
-    "1. Print the \"Lacky\" description to the screen using list & tuple indexing.\n",
-    "1. Loop through the users list printing each person's username, id and description.\n",
-    "1. Add your own entry to the end of the list.\n",
-    "1. Loop again but this time unpack the tuples into variables: username, id, description.  \n",
-    "    - And print them out.\n",
-    "* Copy & paste your answers into chat once completed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Execute this cell before answering the questions\n",
+    "Return to VScode and create a new script called \"tuples.py\" in your mypackage folder.  Insert this code at the top and go through the questions:\n",
+    "\n",
+    "```python\n",
+    "# List of username, id# and description:\n",
     "users = [\n",
     "    ('root', 0, 'Superman'),\n",
     "    ('dave', 121, 'Admin'),\n",
     "    ('renfield', 122, 'Lacky'),\n",
     "    ('daphne', 301, 'Engineer'),\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#3\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#4\n"
+    "]\n",
+    "```\n",
+    "\n",
+    "1. Print the renfield's description to the screen using list & tuple indexing.\n",
+    "1. Loop through the users list outputting each tuple.\n",
+    "1. Add your own entry to the end of the list.\n",
+    "1. Loop and output again but this time unpack the tuples into variables: username, idnum, description.  \n",
+    "\n",
+    "* Copy & paste your script into chat once completed"
    ]
   },
   {
@@ -474,6 +433,28 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is added here so you can practise inside Jupyter if needed:\n",
+    "users = [\n",
+    "    ('root', 0, 'Superman'),\n",
+    "    ('dave', 121, 'Admin'),\n",
+    "    ('renfield', 122, 'Lacky'),\n",
+    "    ('daphne', 301, 'Engineer'),\n",
+    "]"
+   ]
   },
   {
    "cell_type": "code",
