--- a/PyTut2.6_StringsAgain.ipynb
+++ b/PyTut2.6_StringsAgain.ipynb
@@ -241,8 +241,9 @@
    "outputs": [],
    "source": [
     "# Returns the index of the start of the string\n",
-    "# case sensitive\n",
-    "print(long_string.find(\"Floor\"))"
+    "# Note: it is case sensitive\n",
+    "word = 'overdrive'\n",
+    "print(word.find(\"drive\"))"
    ]
   },
   {
@@ -252,7 +253,8 @@
    "outputs": [],
    "source": [
     "# Returns true if all characters are letters ' isn't a letter\n",
-    "print(long_string.isalpha())"
+    "reg = 'DF345KNB'\n",
+    "print(reg.isalpha())"
    ]
   },
   {
@@ -262,7 +264,7 @@
    "outputs": [],
    "source": [
     "# Returns true if all characters are numbers\n",
-    "print(long_string.isalnum())"
+    "print(reg.isalnum())"
    ]
   },
   {
@@ -272,7 +274,7 @@
    "outputs": [],
    "source": [
     "# Replace the first word with the second (Add a number to replace more)\n",
-    "print(long_string.replace(\"Floor\", \"Ground\"))"
+    "print('Jump Up'.replace(\"Up\", \"Around\"))"
    ]
   },
   {
@@ -293,7 +295,8 @@
    "outputs": [],
    "source": [
     "# Split a string into a list based on the delimiter you provide\n",
-    "quote_list = long_string.split(\" \")\n",
+    "long_string = \"I'll catch you if you fall - The Floor\"\n",
+    "quote_list = long_string.split() # <= defaults to a space\n",
     "print(quote_list)"
    ]
   },
@@ -329,20 +332,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -353,7 +342,7 @@
     "1. Have a look at the methods supported by strings: \n",
     " - https://docs.python.org/3/library/stdtypes.html#string-methods\n",
     " - Commonly used methods are **strip, split, join, upper, lower, startswith, endswith, encode, decode**.\n",
-    "  - Try these methods out below.\n",
+    "  - Check the docstrings by typing `?str.<method>` \n",
     "1. Write code to search these strings and print out the position start of the 'oo' \n",
     " - Spooky, Understood, Harpoon\n",
     " - Format the output to say: I found 'oo' in \"x\" at y\n",
@@ -363,6 +352,8 @@
     "    - 123 as an integer, right aligned with a width of 10 zero prefixed chars.\n",
     "    - 17.6789 as a float to 3 decimal places.\n",
     "    - List `['a', 'b', 'c' ]` as it's raw (represented) value.\n",
+    "1. Split the `data` string by separator \",\".\n",
+    "1. Loop through the split data and print everything as upper case.\n",
     "\n",
     "* Copy & paste your answers into chat once completed"
    ]
@@ -409,9 +400,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "str.strip?"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -437,7 +426,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Execute this cell before attempting #4 & #5\n",
+    "data = '1A,DCN2DDBX341_viosA,0f,,0007,00:20:46,Off,Off,On,CHA-1PC,16FC16(Fibre),0,meta_resource,Active/Optimized,Disabled,Disabled'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#5\n"
+   ]
   },
   {
    "cell_type": "code",
