--- a/PyTut2.7_Dictionaries.ipynb
+++ b/PyTut2.7_Dictionaries.ipynb
@@ -612,7 +612,7 @@
    "metadata": {},
    "source": [
     "## Exercise:\n",
-    "* Answer each question in a seperate cell\n",
+    "Back to VScode and create a script named `shapes.py` in your mypackage directory.\n",
     "1. Create an empty dictionary \"shapes\" and add these key value pairs:\n",
     "```\n",
     "line, 2\n",
@@ -620,7 +620,7 @@
     "square, 4\n",
     "pentagon, 5\n",
     "```\n",
-    "1. Print out on seperate lines the dictionary:\n",
+    "1. Print out on separate lines the dictionary:\n",
     "    - keys\n",
     "    - values\n",
     "    - keys and values (items)\n",
@@ -632,7 +632,7 @@
     "```\n",
     "    - Add this new dictionary to the \"shapes\" dictionary and print the result.\n",
     "\n",
-    "* Copy & paste your answers into chat once completed"
+    "* Copy & paste your script into chat once completed"
    ]
   },
   {
