--- a/PyTut2.9_Conditionals.ipynb
+++ b/PyTut2.9_Conditionals.ipynb
@@ -55,19 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Age? 18\n",
-      "You are old enough to drive\n",
-      "Woo hoo\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "age = int(input('Age? '))\n",
     "if age > 17:\n",
@@ -85,18 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Age? 8\n",
-      "You are not old enough to drive\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use an if statement if you want to execute different code regardless\n",
     "# of whether the condition ws met or not\n",
@@ -119,18 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Age? 15\n",
-      "You are not old enough to drive\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# If you want to check for multiple conditions use elif\n",
     "# If the first matches it won't check other conditions that follow\n",
@@ -180,17 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 6\n",
     "if x > 1 and (x > 5 or x < 10):\n",
@@ -199,19 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First number? 3\n",
-      "Second number? 5\n",
-      "Answer is 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Remember that python code uses block indentation:\n",
     "a = int(input('First number? '))\n",
@@ -240,20 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# assignment if/else\n",
     "x = False\n",
@@ -288,17 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Its True that it is not False!!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Invert (not) the True to False;\n",
     "if not True: print('Its True!!!')\n",
@@ -307,17 +242,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Its True it is False!!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Invert the False to be true;\n",
     "if not False: print('Its True it is False!!!')"
@@ -325,18 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x is set\n",
-      "Its True it is False!!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = None\n",
     "\n",
@@ -350,21 +268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Its True it is False!!!\n",
-      "Its True it is False!!!\n",
-      "Its True it is False!!!\n",
-      "Its True it is False!!!\n",
-      "Its True it is False!!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Empty sequences and colelctions;\n",
     "if not '': print('Its True it is False!!!')\n",
@@ -376,27 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(range(0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,28 +302,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-36-a871fdc9ebee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +338,7 @@
     " - Unicycle, bicycle, car, bus, train, unknown\n",
     " \n",
     " \n",
-    "1. Write some code to convert inputed temperature to and from both celsius, fahrenheit.\n",
+    "2. In your VScode mypackage directory create a script named `tempconverter.py` and write some code to convert inputed temperature to and from both celsius, fahrenheit.\n",
     " - Round the answers to whole values\n",
     " - C = (9 * F) / 5 + 32\n",
     " - F = (C - 32) * 5 / 9\n",
@@ -496,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Memory usage"
+    "## Namespace memory usage"
    ]
   },
   {
