--- a/PyTut3.3_Comprehensions.ipynb
+++ b/PyTut3.3_Comprehensions.ipynb
@@ -342,13 +342,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{6: 2, 4: 8, 1: 3, 2: 7}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mylist = [9, 3, 6, 1, 5, 0, 8, 2, 4, 7]\n",
-    "list_b = [6, 4, 6, 1, 2, 2]\n",
-    "{i: mylist.index(i) for i in list_b}"
+    "find = [6, 4, 6, 1, 2, 2]\n",
+    "d = { i: mylist.index(i) for i in find }\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{ i:i**2 for i in range(10) }"
    ]
   },
   {
@@ -497,5 +529,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
